JOTM-06/11/2018-Cambios sqllite,dto
* cambios dtos
*Cambios sqllite 
*Queda pendiente traspasos

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_punto_venta_solicitar.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_punto_venta_solicitar.xml
@@ -99,6 +99,7 @@
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:textSize="24sp"
+                android:textColor="@color/buttonBackgroundColor"
                 android:autofillHints="@string/Buscar"
                 tools:ignore="LabelFor,UnusedAttribute" />
 
