--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompra.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompra.cshtml
@@ -39,10 +39,10 @@
                         <div class="col-lg-5 col-md-5 col-sm-12">
                             <h2>Compras</h2>
                             <ul class="breadcrumb padding-0">
-                                <li class="breadcrumb-item"><a href="~/DashBoard/Vista/Dashboard.aspx"><i class="zmdi zmdi-home"></i></a></li>
-                                <li class="breadcrumb-item active">
-                                    <label>Compras / Ordern de Compra / Nueva </label>
-                                </li>
+                                <li class="breadcrumb-item"><a href=@Url.Action("Inicio", "Home")><i class="zmdi zmdi-home"></i></a></li>
+                                <li class="breadcrumb-item">Compras</li>
+                                <li class="breadcrumb-item">Ordern de Compra</li>
+                                <li class="breadcrumb-item">Nueva</li>
                             </ul>
                         </div>
                     </div>
