--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisicion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisicion.cshtml
@@ -201,9 +201,9 @@
                                                             <td><b>Producto</b></td>
                                                             <td><b>Cantidad</b></td>
                                                             <td><b>Unidad</b></td>
-                                                            <td><b>Aplicacion</b></td>
+                                                            <td><b>Aplicación</b></td>
                                                             <td><b>Centro de Costo</b></td>
-                                                            <td><b>Accion</b></td>
+                                                            <td><b>Acción</b></td>
                                                         </tr>
                                                     </thead>
                                                     <tbody>
