--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -81,7 +81,7 @@
                         </div>
                     </li>
                     <li class="menu_dark"><a href="@Url.Action("Inicio", "Home")"><i class="material-icons">dashboard</i> <span class="icon-name">Dashboard</span></a></li>
-                    <li class="menu_dark"><a href="@Url.Action("Requisiciones", "Requisicion")"><i class="material-icons">feedback </i><span class="icon-name">Requisicion</span> </a></li>
+                    <li class="menu_dark"><a href="@Url.Action("Requisiciones", "Requisicion")"><i class="material-icons">feedback </i><span class="icon-name">Requisición</span> </a></li>
                     <li>
                         <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">shopping_cart</i><span>Compras</span> </a>
                         <ul class="ml-menu">
@@ -112,14 +112,14 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-grid"></i><span>Catalogos</span></a>
+                        <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-grid"></i><span>Catálogos</span></a>
                         <ul class="ml-menu">
                             <li>
                                 <a href="javascript:void(0);" class="menu-toggle toggle"><i class="material-icons">content_paste</i><span>Producto</span> </a>
                                 <ul class="ml-menu">
                                     <li>@Html.ActionLink("Producto", "Producto", "Producto")</li>
                                     <li>@Html.ActionLink("Linea", "LineaProducto", "Producto")</li>
-                                    <li>@Html.ActionLink("Unidad de Medidad", "UnidadMedida", "Producto")</li>
+                                    <li>@Html.ActionLink("Unidad de Medida", "UnidadMedida", "Producto")</li>
                                     <li>@Html.ActionLink("Categoria", "Categoria", "Producto")</li>
                                 </ul>
                             </li>
