--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Index.cshtml
@@ -45,7 +45,7 @@
                         <div class="col-lg-5 col-md-12 offset-lg-1">
                             <div class="card-plain">
                                 <div class="header">
-                                    <h5>Inicio de Sesion</h5>
+                                    <h5>Inicio de Sesión</h5>
                                 </div>
 
                                 <div class="from">
