--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraPago.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraPago.cshtml
@@ -21,7 +21,7 @@
                     <div class="col-lg-5 col-md-5 col-sm-12">
                         <h2>Confirmacion de Pago</h2>
                         <ul class="breadcrumb padding-0">
-                            <li class="breadcrumb-item"><a href=""><i class="zmdi zmdi-home"></i></a></li>
+                            <li class="breadcrumb-item"><a href=@Url.Action("Inicio", "Home")><i class="zmdi zmdi-home"></i></a></li>
                             <li class="breadcrumb-item">Compras</li>
                             <li class="breadcrumb-item">Orden de Compra</li>
                             <li class="breadcrumb-item active">Confirmar Pago</li>
