--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/Ordenes.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/Ordenes.cshtml
@@ -33,7 +33,7 @@
                         <div class="col-lg-5 col-md-5 col-sm-12">
                             <h2>Compras</h2>
                             <ul class="breadcrumb padding-0">
-                                <li class="breadcrumb-item"><a href="~/DashBoard/Vista/Dashboard.aspx"><i class="zmdi zmdi-home"></i></a></li>
+                                <li class="breadcrumb-item"><a href=@Url.Action("Inicio", "Home")><i class="zmdi zmdi-home"></i></a></li>
                                 <li class="breadcrumb-item">Compras</li>
                                 <li class="breadcrumb-item">Ordern de Compra</li>
                             </ul>
@@ -61,7 +61,7 @@
                             </div>
                             <div class="row clearfix blockquote blockquote-info btn-round">
                                 <div class="table-responsive">
-                                    <table class="table table-hover">
+                                    <table class="table table-hover table-striped">
                                         <thead>
                                             <tr>
                                                 <td><b>Gasera</b></td>
@@ -187,7 +187,7 @@
                             </div>
                             <div class="row clearfix blockquote blockquote-info btn-round">
                                 <div class="table-responsive">
-                                    <table class="table table-hover">
+                                    <table class="table table-hover table-striped">
                                         <thead>
                                             <tr>
                                                 <td><strong>Gasera</strong></td>
@@ -226,16 +226,16 @@
                                                                 <span class="icon-name"></span>
                                                             </a>
                                                             @*<a ID="lbPDF" href="@Url.Action("", "OrdenCompra", new { id = _oc.IdOrdenCompra })">
-                                                                <i class="material-icons">picture_as_pdf</i>
-                                                                <span class="icon-name"></span>
-                                                            </a>*@
+                                    <i class="material-icons">picture_as_pdf</i>
+                                    <span class="icon-name"></span>
+                                </a>*@
                                                         }
                                                         @if (_oc.OrdenCompraEstatus.Equals(OrdenCompraEstatusEnum.Compra_cancelada))
                                                         {
                                                             @*<a ID="lbVisualizarOC" href="@Url.Action("OrdenCompraResumen", "OrdenCompra", new { id = _oc.IdOrdenCompra })">
-                                                                <i class="material-icons">remove_red_eye</i>
-                                                                <span class="icon-name"></span>
-                                                            </a>*@
+                                    <i class="material-icons">remove_red_eye</i>
+                                    <span class="icon-name"></span>
+                                </a>*@
                                                         }
                                                         @if (_oc.IdOrdenCompraEstatus.Equals(OrdenCompraEstatusEnum.SolicitudPago))
                                                         {
